--- a/project/src/main/webapp/css_files/index_cat.css
+++ b/project/src/main/webapp/css_files/index_cat.css
@@ -1,7 +1,4 @@
-body{
-	margin:auto;
-	/*width:72%;*/
-}
+
 
 td
 {
